Cleaned up more html and styles. Minor content updates to about-me, links, kmart, and brilliant-ideas.

--- a/about-me.html
+++ b/about-me.html
@@ -14,77 +14,116 @@
 		<div class="article">
 
 			<h1>About Me</h1>
+			<h2>Stats</h2>
 			<table>
-				<tr>
-					<td colspan=2>
-						<font color="#0000FF"><b>Stats</b></font>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<font color="#0000FF">Name:</font></td><td><font color="#008000"> Blaise Alicki</font>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<font color="#0000FF">Birthday:</font></td><td>10/24
-					</td>
-				</tr>    
-				<tr>
-					<td>
-						<font color="#0000FF">Home town:</font></td><td>Grand Rapids, MI
-					</td>
-				</tr>    
-				<tr>
-					<td>
-						<font color="#0000FF">School:</font></td><td>Computer Information Systems at <font color="#800000">Ferris </font><font color="#808000">State </font><font color="#800000">University
-					</td>
-				</tr>    
-				<tr>
-					<td>
-						<font color="#0000FF">Work:</font></td><td>Web Developer and Animation Project Manager at <font color="#FF0000">i</font>Mart
-					</td>
-				</tr>
-				<tr>
-					<td colspan=2>
-						<br>
-					</td>
-				</tr>
-				<tr>
-					<td colspan=2>
-						<font color="#0000FF"><b>Favorites</b></font>
-					</td>
-				</tr>    
-				<tr>
-					<td>
-						<font color="#0000FF">Foods:</font></td><td>Macaroni and Cheese, Pizza Rolls, Chips and Cheese
-					</td>
-				</tr>    
-				<tr>
-					<td>
-						<font color="#0000FF">Drinks:</font></td><td><font color="#00FF00">Mountain</font> <font color="#FF0000">Dew</font>, Chocolate Shakes, Slurpees
-					</td>
-				</tr>    
-				<tr>
-					<td>
-						<font color="#0000FF">Books:</font></td><td>Ender's Game, Lord of the Rings, Catch Me If You Can
-					</td>
-				</tr>    
-				<tr>
-					<td>
-						<font color="#0000FF">TV Shows:</font></td><td>Alias, Scrubs, Late Show with David Letterman
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<font color="#0000FF">Movies:</font></td><td>Apollo 13, the Matrix, Lord of the Rings, Garden State
-					</td>
-				</tr>
-				<tr>
-					<td colspan=2>
-						<br><br><a href="my-dvds.html">My full list of DVDs can be viewed here.</a><br><br>
-					</td>
-				</tr>
+				<tbody>
+					<tr>
+						<td class="label">
+							Name
+						</td>
+						<td class="blaise">
+							Blaise Alicki
+						</td>
+					</tr>
+					<tr>
+						<td class="label">
+							Birthday
+						</td>
+						<td>
+							10/24
+						</td>
+					</tr>
+					<tr>
+						<td class="label">
+							Home town
+						</td>
+						<td>
+							Grand Rapids, MI
+						</td>
+					</tr>
+					<tr>
+						<td class="label">
+							Current town
+						</td>
+						<td>
+							Apex, NC
+						</td>
+					</tr>
+					<tr>
+						<td class="label">
+							School
+						</td>
+						<td>
+							Computer Information Systems at <font color="#800000">Ferris </font><font color="#808000">State </font><font color="#800000">University</font>
+						</td>
+					</tr>    
+					<tr>
+						<td class="label">
+							Work
+						</td>
+						<td>
+							2003 - Web Developer and Animation Project Manager @ <span class="sol">iMart/SmartOnline</span>
+							<br>
+							2009 - Senior Web Developer @ <span class="mm">Micro Medic</span>
+							<br>
+							2015 - Senior Web Developer @ <span class="ix">InspectionXpert</span>
+							<br>
+							2022 - Senior Web Developer @ <span class="lo">LifeOmic</span>
+							<br>
+							2023 - Senior Web Developer @ <span class="fsi">FSI</span>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<h2>Favorites</h2>
+			<table>
+				<tbody>  
+					<tr>
+						<td class="label">
+							Foods
+						</td>
+						<td>
+							Macaroni and Cheese, Pizza Rolls, Chips and Cheese
+						</td>
+					</tr>    
+					<tr>
+						<td class="label">
+							Drinks
+						</td>
+						<td>
+							<font color="#00FF00">Mountain</font> <font color="#FF0000">Dew</font>, Chocolate Shakes, Slurpees
+						</td>
+					</tr>    
+					<tr>
+						<td class="label">
+							Books
+						</td>
+						<td>
+							Ender's Game, Lord of the Rings, Catch Me If You Can
+						</td>
+					</tr>    
+					<tr>
+						<td class="label">
+							TV Shows
+						</td>
+						<td>
+							Alias, Scrubs, Late Show with David Letterman
+						</td>
+					</tr>
+					<tr>
+						<td class="label">
+							Movies
+						</td>
+						<td>
+							Apollo 13, the Matrix, Lord of the Rings, Garden State
+						</td>
+					</tr>
+					<tr>
+						<td colspan=2>
+							<br><br><a href="my-dvds.html">My full list of DVDs can be viewed here.</a><br><br>
+						</td>
+					</tr>
+				</tbody>
 			</table>
 		</div>
 	</div>
