--- a/im-too-tired.html
+++ b/im-too-tired.html
@@ -10,32 +10,65 @@
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
 	<div id="body">
 		<div class="article">
-
 			<h1>Things I'm Too Tired To Say</h1>
 			<h6 class=warn>Warning: most amusing when tired, most confusing when awake.</h6>
-	
-			I really shouldn't get up in the morning until after I've gone to bed.<br><br>
-			I refuse to live on Eastern Standard Time.<br><br>
-			And don't think you can trick me with that daylight savings crap.<br><br>
-			I wish my snooze alarm would go off after 11 minutes instead of only 9.<br><br>
-			I must be really tired, batteries are funny.<br><br>
-			You can't argue with a cardboard box. The box will always win.<br><br>
-			Acceleration due to gravity is also really funny if you're tired.<br><br>
-			I've decided my site needs a goalie. If you would like to apply for the position please send me an email.<br><br>
-			I love it when a rescue helicopter crashes and then they have to send another helicopter to save everybody.<br><br>
-			Conflict delays progress.<br><br>
-			Acceleration due to gravity is also very funny.<br><br>
-			I may be much more insane than I was previously led to believe.<br><br>
-			The human body is nothing more than an electrochemical response to stimuli.<br><br>
-			The word 'buoy' is underused.<br><br>
-			I would also like to hear 'zip' used a bit more often in situations that don't involve computers.<br><br>
-			I'd be a lot happier if everyone on the internet would stop being so lazy and just send me a dollar.<br><br>
-			Of the eight corners in my room, I am only displeased with one of them.<br><br>
-			If you ever need a place to sleep, there's extra space and a blanket under my desk, only seven dollars a night.<br><br>
-			I did not make up the word 'alphabetical' so you don't have to ask my permission to use it.<br><br>
-			
-    
-
+			<p>
+				I really shouldn't get up in the morning until after I've gone to bed.
+			</p>
+			<p>
+				I refuse to live on Eastern Standard Time.
+			</p>
+			<p>
+				And don't think you can trick me with that daylight savings crap.
+			</p>
+			<p>
+				I wish my snooze alarm would go off after 11 minutes instead of only 9.
+			</p>
+			<p>
+				I must be really tired, batteries are funny.
+			</p>
+			<p>
+				You can't argue with a cardboard box. The box will always win.
+			</p>
+			<p>
+				Acceleration due to gravity is also really funny if you're tired.
+			</p>
+			<p>
+				I've decided my site needs a goalie. If you would like to apply for the position please send me an email.
+			</p>
+			<p>
+				I love it when a rescue helicopter crashes and then they have to send another helicopter to save everybody.
+			</p>
+			<p>
+				Conflict delays progress.
+			</p>
+			<p>
+				Acceleration due to gravity is also very funny.
+			</p>
+			<p>
+				I may be much more insane than I was previously led to believe.
+			</p>
+			<p>
+				The human body is nothing more than an electrochemical response to stimuli.
+			</p>
+			<p>
+				The word 'buoy' is underused.
+			</p>
+			<p>
+				I would also like to hear 'zip' used a bit more often in situations that don't involve computers.
+			</p>
+			<p>
+				I'd be a lot happier if everyone on the internet would stop being so lazy and just send me a dollar.
+			</p>
+			<p>
+				Of the eight corners in my room, I am only displeased with one of them.
+			</p>
+			<p>
+				If you ever need a place to sleep, there's extra space and a blanket under my desk, only seven dollars a night.
+			</p>
+			<p>
+				I did not make up the word 'alphabetical' so you don't have to ask my permission to use it.
+			</p>
 		</div>
 	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
