--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 	<div id="body">
 		<div class="article" style="text-align: center;">
 			<h1>Welcome to Turtle-IS.com</h1>
-
-			<p>The official website of <span class="blaise">Blaise Alicki</span> and Turtle Interactive Software.</p>
+			<p>
+				The official website of <span class="blaise">Blaise Alicki</span> and Turtle Interactive Software.
+			</p>
 			<hr>
-
 			<h2>Site Description</h2>
-
-			<p style="padding: 0 120px;">This site is an amalgamation of my creative abilities. It's 2 to 20 megabytes of things I thought and thoughts I think. My imagination and madness in one neat little package. My inane and insane ramblings are here for little more than my own amusement, but feel free to take some time to enjoy them for yourself.</p>
+			<p style="padding: 0 120px;">
+				This site is an amalgamation of my creative abilities. It's 2 to 20 megabytes of things I thought and thoughts I think. My imagination and madness in one neat little package. My inane and insane ramblings are here for little more than my own amusement, but feel free to take some time to enjoy them for yourself.
+			</p>
 			<hr>
-
 			<strong>830622</strong> folks (and/or bots) have hit the site (before I made it static and stopped counting). Thanks!
 		</div>
 	</div>
