--- a/kmart.html
+++ b/kmart.html
@@ -11,94 +11,82 @@
 	
 	<div id="body">
 		<div class="article">
-
-			<h1>My <font color="#FF0000">Complaints</font> About <font color="#FF0000">K</font><font color="#0000FF">mart</font></h1>
-
-
-			<h2 class="a1">There is no ad merchandise</h2>
-			
-		<p>
-			Don't you just love going to a store that doesn't have anything to sell.We ran out of air conditioners after the first three hours of a three day sale.
-		</p>
-		
-			<h2 class="a1">Rainchecks are stupid</h2>
-			
-		<p>
-			I went to the store to get buy something, but instead I got a stupid piece of paper. Oh joy! now I can wipe my ass.
-		</p>
-		
-			<h2 class="a1">The corporate office is run by monkeys</h2>
-			
-		<p>
-			Not super-intelligent, genetically engineered monkeys either. No, they are a bunch of drunken, stupid-ass monkeys that get off by throwing shit at each other.
-		</p>
-
-			<h2 class="a1">Everyday the prices change</h2>
-
-		<p>
-			Up and down and up and down the prices just keep moving.
-		</p>
-
-			<h2 class="a1">Somebody stole Layaway Jones</h2>
-		<p>
-			And he hasn't been seen since.
-		</p>
-			<h2 class="a1">Fewer than half the air conditioners in the store are working</h2>
-		<p>
-			It is the hottest store in West Michigan. When its 85 degrees outside, its 82 degrees inside. That's why I'm trying
-			to start a water gun fight in the store. So if you stop in please bring a loaded squirt gun.<br><br>
-			Update: Air conditioning seems to be working at the moment. Very bizarre.<br><br>
-			Update 2: Only one air conditioner was actually fixed. Not surprising.<br><br>
-			Update 3: Most recent attempt to fix AC appears to have work. AND, this is big so sit down, THE BREAK ROOM HAS AIR CONDITIONING!!!
-		</p>
-
-			<h2 class="a1">Martha Stewart</h2>
-
-		<p>
-			I don't think I have to elaborate.
-		</p>
-		
-			<h2 class="a1"><font color="#FF0000">K</font>mart hates America</h2>
-
-		<p>
-			I had to work eight hours on the Fourth of July because <font color="#FF0000">K</font><font color="#0000FF">mart</font>
-			is open. I also get to work on Labor Day and Memorial Day, because <font color="#FF0000">K</font><font color="#0000FF">mart </font>is open
-			on those days too. Clearly, <font color="#FF0000">K</font><font color="#0000FF">mart</font> hates America.<br><br>
-			Update: I somehow got out of working on Memorial Day, but Kmart was still open, so I stand by my statement: Kmart Hates America.
-		</p>
-
-			<h2 class="a1">A good number of customers are dumb as bricks</h2>
-
-		<p>
-			Lets establish some good rules to make things easier for all of us:
-			<ol>
-				<li>If your car has a working alarm, you should not be shopping at <font color="#FF0000">K</font><font color="#0000FF">mart</font>. You can afford better.</li>
-				<li>You are not the center of the universe. If you want me to help you, wait until I'm finished helping the customer I am with.</li>
-				<li>If you aren't going to listen to what I have to say, then please don't ask me any questions. If I say there are none in the back, don't expect me to go look just to make you feel better. I just checked ten minutes ago for the last person who asked for the same thing.</li>
-				<li>The bathroom has NEVER moved. Do you understand the amount of work that would be involved in moving plumbing around a building? We don't have that kind of money. Feel free to check the same corner of the store the bathroom has always been in before asking where it is.</li>
-				<li>Everyone gets the same ad as you. Just because I don't have a product in stock when you get to the store doesn't necessarily mean I didn't have any. I have a hard time feeling sorry for someone who waits until an hour before we close on Saturday to come in looking for ad merchandise.</li>
-				<li>The ad is printed nationally and most ordering is controlled above the store level. As a store we have no control over what is in the ad and little control over how much ad merchandise we have on hand. Is it stupid? Yes, its the <font color="#FF0000">K</font><font color="#0000FF">mart</font> way. Get over it.</li>
-				<li>If you're going to buy patio furniture, please drive a truck to the store. Not an SUV, not a minivan, A TRUCK. Patio furniture comes in big boxes.</li>
-				<li>If I'm in the store and I'm wearing a red vest and a name tag don't ask me if I work at the store unless you expect a smart-ass answer.</li>
-			</ol>
-		</p>
-
-			<h2 class="a1">I work at <font color="#FF0000">K</font>mart</h2>
-
-		<p>
-			Maybe you didn't understand... <font color="#008000"> I</font> WORK AT <font color="#FF0000">K</font><font color="#0000FF">MART</font>!!!<br><br>
-			Update: Okay, I don't actually work at Kmart anymore, but it still sucks.
-
-		</p>
-
-		
-			<h2 class="a1">My <font color="#FF0000">K</font><font color="#0000FF">mart</font> pictures</h2>
-
-		<p>
-			Not technically a complaint. <a href="kmart-pics.html">Click to see.</a>
-		</p>
-
-
+			<h1>My <span class="warn">Complaints</span> About <span class="k">K</span><span class="mart">mart</span></h1>
+			<h2 class="label">There is no ad merchandise</h2>			
+			<p>
+				Don't you just love going to a store that doesn't have anything to sell. We ran out of air conditioners after the first three hours of a three day sale.
+			</p>		
+			<h2 class="label">Rainchecks are stupid</h2>
+			<p>
+				I went to the store to get buy something, but instead I got a stupid piece of paper. Oh joy! now I can wipe my ass.
+			</p>		
+			<h2 class="label">The corporate office is run by monkeys</h2>			
+			<p>
+				Not super-intelligent, genetically engineered monkeys either. No, they are a bunch of drunken, stupid-ass monkeys that get off by throwing shit at each other.
+			</p>
+			<h2 class="label">Everyday the prices change</h2>
+			<p>
+				Up and down and up and down the prices just keep moving.
+			</p>
+			<h2 class="label">Somebody stole Layaway Jones</h2>
+			<p>
+				And he hasn't been seen since.
+			</p>
+			<h2 class="label">Fewer than half the air conditioners in the store are working</h2>
+			<p>
+				It is the hottest store in West Michigan. When its 85 degrees outside, its 82 degrees inside. That's why I'm trying
+				to start a water gun fight in the store. So if you stop in please bring a loaded squirt gun.
+			</p>
+			<p>
+				Update: Air conditioning seems to be working at the moment. Very bizarre.
+			</p>
+			<p>
+				Update 2: Only one air conditioner was actually fixed. Not surprising.
+			</p>
+			<p>
+				Update 3: Most recent attempt to fix AC appears to have work. AND, this is big so sit down, THE BREAK ROOM HAS AIR CONDITIONING!!!
+			</p>
+			<h2 class="label">Martha Stewart</h2>
+			<p>
+				I don't think I have to elaborate.
+			</p>		
+			<h2 class="label"><span class="k">K</span>mart hates America</h2>
+			<p>
+				I had to work eight hours on the Fourth of July because <span class="k">K</span><span class="mart">mart</span>
+				is open. I also get to work on Labor Day and Memorial Day, because <span class="k">K</span><span class="mart">mart</span> is open
+				on those days too. Clearly, <span class="k">K</span><span class="mart">mart</span> hates America.
+			</p>
+			<p>
+				Update: I somehow got out of working on Memorial Day, but Kmart was still open, so I stand by my statement: Kmart Hates America.
+			</p>
+			<h2 class="label">A good number of customers are dumb as bricks</h2>
+			<p>
+				Lets establish some good rules to make things easier for all of us:
+				<ol>
+					<li>If your car has a working alarm, you should not be shopping at <span class="k">K</span><span class="mart">mart</span>. You can afford better.</li>
+					<li>You are not the center of the universe. If you want me to help you, wait until I'm finished helping the customer I am with.</li>
+					<li>If you aren't going to listen to what I have to say, then please don't ask me any questions. If I say there are none in the back, don't expect me to go look just to make you feel better. I just checked ten minutes ago for the last person who asked for the same thing.</li>
+					<li>The bathroom has NEVER moved. Do you understand the amount of work that would be involved in moving plumbing around a building? We don't have that kind of money. Feel free to check the same corner of the store the bathroom has always been in before asking where it is.</li>
+					<li>Everyone gets the same ad as you. Just because I don't have a product in stock when you get to the store doesn't necessarily mean I didn't have any. I have a hard time feeling sorry for someone who waits until an hour before we close on Saturday to come in looking for ad merchandise.</li>
+					<li>The ad is printed nationally and most ordering is controlled above the store level. As a store we have no control over what is in the ad and little control over how much ad merchandise we have on hand. Is it stupid? Yes, its the <span class="k">K</span><span class="mart">mart</span> way. Get over it.</li>
+					<li>If you're going to buy patio furniture, please drive a truck to the store. Not an SUV, not a minivan, A TRUCK. Patio furniture comes in big boxes.</li>
+					<li>If I'm in the store and I'm wearing a red vest and a name tag don't ask me if I work at the store unless you expect a smart-ass answer.</li>
+				</ol>
+			</p>
+			<h2 class="label">I work at <span class="k">K</span>mart</h2>
+			<p>
+				Maybe you didn't understand... <span class="blaise">I</span> WORK AT <span class="k">K</span><span class="mart">MART</span>!!!
+			</p>
+			<p>
+				Update: Okay, I don't actually work at Kmart anymore, but it still sucks.
+			</p>
+			<p>
+				Update 2: Welp, <span class="k">K</span><span class="mart">mart</span> has basically gone out of business, so I guess I win.
+			</p>
+			<h2 class="label">My <span class="k">K</span><span class="mart">mart</span> pictures</h2>
+			<p>
+				Not technically a complaint. <a href="kmart-pics.html">Click to see.</a>
+			</p>
 		</div>
 	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
