--- a/links.html
+++ b/links.html
@@ -12,47 +12,33 @@
 	<div id="body">
 		<div class="article">
 			<h1>Links</h1>
-
-<div>
-	
-		<p>
-			<a href="http://www.ign.com">IGN</a> - My favorite place for video game news and reviews.
-		</p>
-		
-		<p>
-			<a href="http://www.gamefaqs.com">GameFAQs</a> - Guides for games.
-		</p>
-		
-		<p>
-			<a href="http://www.google.com">Google</a> - Best search engine ever.
-		</p>
-		
-		<p>
-			<a href="http://www.yahoo.com">Yahoo!</a> - Good for browsing topics.
-		</p>
-		
-		<p>
-			<a href="http://www.howstuffworks.com">How Stuff Works</a> - This aptly named site explains how stuff works.
-		</p>
-		
-		<p>
-			<a href="http://www.penny-arcade.com">Penny Arcade Cartoons</a> - Video game related comic strip updated three times a week.
-		</p>
-		
-		<p>
-			<a href="http://www.straightdope.com">Straight Dope</a> - If you have a question, they have the answer.
-		</p>
-		
-		<p>
-			<a href="http://www.fullsystemfailure.com">full.system.failure</a> - The home page for Nick's band.
-		</p>
-		
-		<p>
-			<a href="http://www.rpgtoolkit.com">RPG Toolkit</a> - Contains the RPG toolkit I am using to make my game.
-		</p>
-		
-</div>
-
+			<p>
+				<a href="http://www.ign.com">IGN</a> - My favorite place for video game news and reviews.
+			</p>			
+			<p>
+				<a href="http://www.gamefaqs.com">GameFAQs</a> - Guides for games.
+			</p>			
+			<p>
+				<a href="http://www.google.com">Google</a> - <span class="strike">Best search engine ever</span> Still the best search engine, but that's not saying much anymore.
+			</p>			
+			<p>
+				<a href="http://www.howstuffworks.com">How Stuff Works</a> - This aptly named site explains how stuff works.
+			</p>			
+			<p>
+				<a href="http://www.penny-arcade.com">Penny Arcade Cartoons</a> - Video game related comic strip updated three times a week.
+			</p>			
+			<p>
+				<a href="http://www.straightdope.com">Straight Dope</a> - If you have a question, they have the answer, though they stopped answering new questions in 2018.
+			</p>
+			<p>
+				<a href="http://www.yahoo.com">Yahoo!</a> - <span class="strike">Good for browsing topics</span> Can't really recommend this anymore, maybe try reddit.
+			</p>
+			<p>
+				<a href="http://www.fullsystemfailure.com" class="strike">full.system.failure</a> - <span class="strike">The home page for Nick's band</span> Alas, this band has moved on.
+			</p>			
+			<p>
+				<a href="http://www.rpgtoolkit.com" class="strike">RPG Toolkit</a> - <span class="strike">Contains the RPG toolkit I am using to make my game</span> Sadly, gone now.
+			</p>
 		</div>
 	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
