--- a/movies.html
+++ b/movies.html
@@ -11,54 +11,35 @@
 	
 	<div id="body">
 		<div class="article">
-
-			<h1>The Movie Page</h1>
-			
-			<h2><font color="#008000">Blaise Alicki</font></h3>
-
-			
-		<p>
-			So, I'm writing a movie. (Actually, I'm working on three movies now.)
-		</p>
-		
-			<h2><font color="#0000FF">The Concept</font></h3>
-			
-		<p>
-			The original idea is a life without consequences for the first movie.
-		</p>
-		
-			<h2><font color="#0000FF">That's A Terrible Idea</font></h3>
-			
-		<p>
-			I don't care.
-		</p>
-		
-			<h2><font color="#0000FF">Wogga?</font></h3>
-			
-		<p>
-			Wogga wogga.
-		</p>
-		
-			<h2><font color="#0000FF">So, Is That It?</font></h3>
-		</p>
-		
-		<p>
-			No, but that's all I'm disclosing publicly at this time. If you want more, you'll have to pay me for it. I have some story boards for a few shots and a couple of scenes worked out and my main characters have been fleshed out a bit. Other than that, I have no idea for an actual story to take place during the movie.
-		</p>
-		
-			<h2><font color="#0000FF">And The Second Movie?</font></h3>
-			
-		<p>
-			I had this whole story about some witness protection thing and evil lawyers, but I'm not sure I want to make that one any more right now.
-		</p>
-		
-			<h2><font color="#0000FF">Alright, What About The Third Movie?</font></h3>
-			
-		<p>
-			It's supposed to be a funny movie about Ninjas. This one actually has some pieces of a script done. <a href="ninjah-fantasy.html">Click here</a> to see what I've written so far.
-		</p>
-		
-
+			<h1>The Movie Page</h1>			
+			<h2 class="blaise">Blaise Alicki</h2>			
+			<p>
+				So, I'm writing a movie. (Actually, I'm working on three movies now.)
+			</p>		
+			<h2 class="label">The Concept</h2>			
+			<p>
+				The original idea is a life without consequences for the first movie.
+			</p>		
+			<h2 class="label">That's A Terrible Idea</h2>			
+			<p>
+				I don't care.
+			</p>		
+			<h2 class="label">Wogga?</h2>			
+			<p>
+				Wogga wogga.
+			</p>		
+			<h2 class="label">So, Is That It?</h2>		
+			<p>
+				No, but that's all I'm disclosing publicly at this time. If you want more, you'll have to pay me for it. I have some story boards for a few shots and a couple of scenes worked out and my main characters have been fleshed out a bit. Other than that, I have no idea for an actual story to take place during the movie.
+			</p>		
+			<h2 class="label">And The Second Movie?</h2>			
+			<p>
+				I had this whole story about some witness protection thing and evil lawyers, but I'm not sure I want to make that one any more right now.
+			</p>		
+			<h2 class="label">Alright, What About The Third Movie?</h2>			
+			<p>
+				It's supposed to be a funny movie about Ninjas. This one actually has some pieces of a script done. <a href="ninjah-fantasy.html">Click here</a> to see what I've written so far.
+			</p>
 		</div>
 	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
