--- a/ninjah-fantasy.html
+++ b/ninjah-fantasy.html
@@ -11,101 +11,112 @@
 	
 	<div id="body">
 		<div class="article">
-
-<div>
-<h1>Nin-Jah Fantasy</h1>
-<p>&nbsp;</p>
-<p>In the future of a long time ago (i.e. right now) there is 
-a gang of Nin-Jah traveling the country in search of something. And then they 
-found something, but discovered it was not what they were looking for, so they 
-put it back and continued their search. Suddenly they found what they were 
-looking for, but one of them dropped it and it broke. So now, their search 
-continues.</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p><u>SCARY SHADOW SCENE</u></p>
-<p>&nbsp;</p>
-<p>Ext. Night</p>
-<p>&nbsp;</p>
-<p>Four Nin-Jah (SHIN, NEE, TOE, and WANG) are sneaking through the shadows when WANG suddenly screams like a little girl</p>
-<p>&nbsp;</p>
-<p>SHIN grabs WANG and throws him to the ground.</p>
-<p>&nbsp;</p>
-<p style="text-indent: .5in">SHIN: What the hell is your 
-problem, WANG?</p>
-<p>&nbsp;</p>
-<p style="text-indent: .5in">WANG: I thought I saw something.</p>
-<p>&nbsp;</p>
-<p style="text-indent: .5in">SHIN: There's nothing here but 
-your shadow.</p>
-<p>&nbsp;</p>
-<p style="text-indent: .5in">WANG: ...I have a really scary 
-shadow...</p>
-<p>&nbsp;</p>
-<p style="text-indent: .5in">SHIN: Keep moving and shut up.</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p><u>CART-FU SCENE</u></p>
-<p>&nbsp;</p>
-<p>Ext. Shopping Mart Night</p>
-<p>&nbsp;</p>
-<p>NEE and TOE are walking through a parking lot. NEE is pushing a shopping cart.</p>
-<p>&nbsp;</p>
-<p style="text-indent: .5in">NEE: I know Cart-fu.</p>
-<p>&nbsp;</p>
-<p style="text-indent: .5in">TOE: You're an idiot.</p>
-<p>&nbsp;</p>
-<p>NEE slams the cart into TOE.</p>
-<p>&nbsp;</p>
-<p style="text-indent: .5in">TOE: Damn it, NEE, you hit me.</p>
-<p>&nbsp;</p>
-<p style="text-indent: .5in">NEE: Hit you with a <i>CART</i>!</p>
-<p>&nbsp;</p>
-<p style="text-indent: .5in">TOE: That's it! Let's go!</p>
-<p>&nbsp;</p>
-<p>NEE and TOE start fighting as the camera pans away. When the camera pans back, TOE is wrapped into and around the cart, once again being pushed by NEE.</p>
-<p>&nbsp;</p>
-<p style="text-indent: .5in">NEE: Bitch.</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p><u>NIN-JAH DANCE SCENE</u></p>
-<p>&nbsp;</p>
-<p>The Nin-Jah dance.</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p><u>CALL FROM MOM SCENE</u></p>
-<p>&nbsp;</p>
-<p>Int. Store</p>
-<p>&nbsp;</p>
-<p>A cell phone rings in a most annoying and comical tone. TOE pulls the phone out of his pocket and beings conversing with the person on 
-the other end.</p>
-<p>&nbsp;</p>
-<p style="text-indent: .5in">TOE: Hello... Hi, Mom... No, Mom, I can't bring home milk, I'm with the guys and we're looking for the thing...Yeah, I 
-know I told you we found it, but Wang dropped it and now we're trying to find another one... Yes, we're going to make him pay to replace it, but he needs help 
-finding it... Sorry, I have to go, the guys are threatening to smash my phone...I love you too, Mom. Bye.</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p><u>DO YOU WORK HERE? RUNNING GAG</u></p>
-<p>&nbsp;</p>
-<p>Int. Store</p>
-<p>&nbsp;</p>
-<p>One of the Nin-Jah will have a red vest as part of his outfit. He will be asked at every store if he works there. His response will 
-be punching the person out.</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p><u>FAILED NIN-JAH EXIT SCENE</u></p>
-<p>&nbsp;</p>
-<p>Int. Store</p>
-<p>&nbsp;</p>
-<p>The four Nin-Jah are standing in an aisle as they decide the item Wang is holding is not what they are looking for.</p>
-<p>&nbsp;</p>
-<p style="text-indent: .5in">SHIN: Alright, Wang, put it back on the shelf, throw a smoke bomb, and let's get out of here.</p>
-<p>&nbsp;</p>
-<p>Wang throws the item smashing into the ground as he puts the smoke bomb on the shelf. Suddenly the Nin-Jah are gone.</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-</div>
-
+			<h1>Nin-Jah Fantasy</h1>
+			<p>
+				In the future of a long time ago (i.e. right now) there is a gang of Nin-Jah
+				traveling the country in search of something. And then they found something,
+				but discovered it was not what they were looking for, so they put it back
+				and continued their search. Suddenly they found what they were looking for,
+				but one of them dropped it and it broke. So now, their search continues.
+			</p>
+			<h2>SCARY SHADOW SCENE</h2>
+			<h3>Ext. Night</h3>
+			<p>
+				Four Nin-Jah (SHIN, NEE, TOE, and WANG) are sneaking through the shadows when WANG suddenly screams like a little girl.
+			</p>
+			<p>
+				SHIN grabs WANG and throws him to the ground.
+			</p>
+			<p class="indent">
+				SHIN: What the hell is your problem, WANG?
+			</p>
+			<p class="indent">
+				WANG: I thought I saw something.
+			</p>
+			<p class="indent">
+				SHIN: There's nothing here but your shadow.
+			</p>
+			<p class="indent">
+				WANG: ...I have a really scary shadow...
+			</p>
+			<p class="indent">
+				SHIN: Keep moving and shut up.
+			</p>
+			<h2>CART-FU SCENE</h2>
+			<h3>Ext. Shopping Mart Night</h3>
+			<p>
+				NEE and TOE are walking through a parking lot. NEE is pushing a shopping cart.
+			</p>
+			<p class="indent">
+				NEE: I know Cart-fu.
+			</p>
+			<p class="indent">
+				TOE: You're an idiot.
+			</p>
+			<p>
+				NEE slams the cart into TOE.
+			</p>
+			<p class="indent">
+				TOE: Damn it, NEE, you hit me.
+			</p>
+			<p class="indent">
+				NEE: Hit you with a <i>CART</i>!
+			</p>
+			<p class="indent">
+				TOE: That's it! Let's go!
+			</p>
+			<p>
+				NEE and TOE start fighting as the camera pans away. When the camera pans back, TOE is wrapped into and around the cart, once again being pushed by NEE.
+			</p>
+			<p class="indent">
+				NEE: Bitch.
+			</p>
+			<h2>NIN-JAH DANCE SCENE</h2>
+			<p>
+				The Nin-Jah dance.
+			</p>
+			<h2>CALL FROM MOM SCENE</h2>
+			<h3>Int. Store</h3>
+			<p>
+				A cell phone rings in a most annoying and comical tone. TOE pulls the phone out of his pocket and beings conversing with the person on the other end.
+			</p>
+			<p class="indent">
+				TOE: Hello...
+			</p>
+			<p class="indent">
+				TOE: Hi, Mom... 
+			</p>
+			<p class="indent">
+				TOE: No, Mom, I can't bring home milk, I'm with the guys and we're looking for the thing...
+			</p>
+			<p class="indent">
+				TOE: Yeah, I know I told you we found it, but Wang dropped it and now we're trying to find another one... 
+			</p>
+			<p class="indent">
+				TOE: Yes, we're going to make him pay to replace it, but he needs help finding it...
+			</p>
+			<p class="indent">
+				TOE: Sorry, I have to go, the guys are threatening to smash my phone...
+			</p>
+			<p class="indent">
+				TOE: I love you too, Mom. Bye.
+			</p>
+			<h2>DO YOU WORK HERE? RUNNING GAG</h2>
+			<h3>Int. Store</h3>
+			<p>
+				One of the Nin-Jah will have a red vest as part of his outfit. He will be asked at every store if he works there. His response will be punching the person out.
+			</p>
+			<h2>FAILED NIN-JAH EXIT SCENE</h2>
+			<h3>Int. Store</h3>
+			<p>
+				The four Nin-Jah are standing in an aisle as they decide the item Wang is holding is not what they are looking for.
+			</p>
+			<p class="indent">
+				SHIN: Alright, Wang, put it back on the shelf, throw a smoke bomb, and let's get out of here.
+			</p>
+			<p>
+				Wang throws the item smashing into the ground as he puts the smoke bomb on the shelf. Suddenly the Nin-Jah are gone.
+			</p>
 		</div>
 	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
