--- a/ode-to-my-pop.html
+++ b/ode-to-my-pop.html
@@ -12,20 +12,42 @@
 	<div id="body">
 		<div class="article" style="text-align: center;">
 			<h1>Ode To My Pop</h1>
-			<div>
-			Carbonated, caffeinated, bubbly goodness.<br><br>
-			Get yours now.<br><br>
-			In a can,<br><br>
-			Or a bottle,<br><br>
-			Or a really big bottle,<br><br>
-			For those of you who need a lot.<br><br>
-			You know who you are.<br><br>
-			It's always on sale somewhere.<br><br>
-			Hurry, you don't want to miss the special discount.<br><br>
-			It's cheaper than gas,<br><br>
-			Tastes better too!<br><br>
-			Oh, how I love the <font color=#00FF00> Mountain</font> <font color=#FF0000>Dew</font>.<br><br>
-			</div>
+			<p>
+				Carbonated, caffeinated, bubbly goodness.
+			</p>
+			<p>
+				Get yours now.
+			</p>
+			<p>
+				In a can,
+			</p>
+			<p>
+				Or a bottle,
+			</p>
+			<p>
+				Or a really big bottle,
+			</p>
+			<p>
+				For those of you who need a lot.
+			</p>
+			<p>
+				You know who you are.
+			</p>
+			<p>
+				It's always on sale somewhere.
+			</p>
+			<p>
+				Hurry, you don't want to miss the special discount.
+			</p>
+			<p>
+				It's cheaper than gas,
+			</p>
+			<p>
+				Tastes better too!
+			</p>
+			<p>
+				Oh, how I love the <span class="mountain">Mountain</span> <span class="dew">Dew</span>.			
+			</p>
 		</div>
 	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
