--- a/ramblings.html
+++ b/ramblings.html
@@ -11,26 +11,27 @@
 	
 	<div id="body">
 		<div class="article">
-
 			<h1>Ramblings</h1>
-			<h2 class="a1">
+			<h2 class="label">
 				7/15/2002
 			</h2>
-			<p>Saw Reign of Fire a day or two ago. I've decided it is neither a good nor a bad movie, but it is most certainly a movie. Starburst may have created the worlds greatest commercial. Its the one where a girl on a couch unwraps a Starburst in her mouth. Going to the dentist today. I'm over 48 hours into Tactics Ogre, it's taking forever to beat. Meanwhile, Neverwinter Nights is going unplayed and Eternal Darkness and Warcraft 3 are unpurchased.
+			<p>
+				Saw Reign of Fire a day or two ago. I've decided it is neither a good nor a bad movie, but it is most certainly a movie. Starburst may have created the worlds greatest commercial. Its the one where a girl on a couch unwraps a Starburst in her mouth. Going to the dentist today. I'm over 48 hours into Tactics Ogre, it's taking forever to beat. Meanwhile, Neverwinter Nights is going unplayed and Eternal Darkness and Warcraft 3 are unpurchased.
 			</p>
-			<h2 class="a1">
+			<h2 class="label">
 				7/23/2002
 			</h2>
-			<p>I remain cavity-free. Got Eternal Darkness. I have a feeling that I will never beat the game as I barely made it through the first level. I suck at video games. And yet I own over a hundred of them (including computer games and ROMs.) I'm also eagerly awaiting the upcoming release of Mario Sunshine and am very jealous of the Japanese people who are playing the game right now. Austin Powers opens Friday, the newest commercial seems to be the funniest one so far. Hopefully I don't have to work Friday so I can see it opening day.
+			<p>
+				I remain cavity-free. Got Eternal Darkness. I have a feeling that I will never beat the game as I barely made it through the first level. I suck at video games. And yet I own over a hundred of them (including computer games and ROMs.) I'm also eagerly awaiting the upcoming release of Mario Sunshine and am very jealous of the Japanese people who are playing the game right now. Austin Powers opens Friday, the newest commercial seems to be the funniest one so far. Hopefully I don't have to work Friday so I can see it opening day.
 			</p>
-			<h2 class="a1">
+			<h2 class="label">
 				7/26/2002
 			</h2>
-			<p>Saw Austin Powers. It drags in a few spots and gets a little weird at the end, but overall it is very funny and definitely worth seeing. Came home to a black out. Fortunately my glow-in-the-dark Gameboy had charged batteries so I was able to play Tactics Ogre until the power came on an hour later.
+			<p>
+				Saw Austin Powers. It drags in a few spots and gets a little weird at the end, but overall it is very funny and definitely worth seeing. Came home to a black out. Fortunately my glow-in-the-dark Gameboy had charged batteries so I was able to play Tactics Ogre until the power came on an hour later.
 			</p>
-
-</div>
-</div>
+		</div>
+	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
 </body>
 </html>
