--- a/updates.html
+++ b/updates.html
@@ -21,10 +21,17 @@
 
 
 <table bgcolor=#FFFFFF cellpadding=5 cellspacing=5 width=995>
-
 	
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 5/12/25 - 6:26 pm</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 5/17/25 - 9:32 pm</h3></td>
+  </tr>
+  <tr>
+    <td><img src="images/claythumb01.jpg"><p><br></p></td>
+    <td>Updated <a href=about-me.html>about me</a> with 60% more accurate information about me. Changed <a href="links.html">links</a> to update descriptions and strike a few fallen sites. Updated <a href="brilliant-ideas.html">brilliant ideas</a> with all the advancements that happened with my ideas in the 20 years since I put them out into the world. The minorest of updates to <a href="kmart.html">Kmart</a>, because I won.</td>
+  </tr>
+
+  <tr>
+    <td colspan=2><hr><h3 class="label">Me - 5/12/25 - 6:26 pm</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -32,7 +39,7 @@
   </tr>
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 5/26/04 - 9:55 pm</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 5/26/04 - 9:55 pm</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -42,7 +49,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 2/19/04 - 7:50 pm</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 2/19/04 - 7:50 pm</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -52,7 +59,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 1/31/04 - 9:37 pm</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 1/31/04 - 9:37 pm</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -62,7 +69,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 10/23/03 - 9:42 am</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 10/23/03 - 9:42 am</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -72,7 +79,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 9/9/03 - 12:09 am</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 9/9/03 - 12:09 am</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -82,7 +89,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 7/31/03 - 12:15 am</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 7/31/03 - 12:15 am</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -92,7 +99,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 6/13/03 - 11:51 pm</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 6/13/03 - 11:51 pm</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -102,7 +109,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 5/28/03 - 9:37 pm</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 5/28/03 - 9:37 pm</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -112,7 +119,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a2">CrazyBoy</h3></td>
+    <td colspan=2><hr><h3 class="crazyboy">CrazyBoy</h3></td>
   </tr>
   <tr>
     <td><img src="images/cbthumb01.jpg"><p><br></p></td>
@@ -122,7 +129,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a2">CrazyBoy - Dropped a jelly bean in bliaz's cup</h3></td>
+    <td colspan=2><hr><h3 class="crazyboy">CrazyBoy - Dropped a jelly bean in bliaz's cup</h3></td>
   </tr>
   <tr>
     <td><img src="images/cbthumb01.jpg"><p><br></p></td>
@@ -132,37 +139,37 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 3/7/03 - 8:36 pm</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 3/7/03 - 8:36 pm</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
-    <td>Added a second <font color="#0000FF"><a href="drawings.html">piture</a></font> page of drawings and a page of <a href="comics.html">comics</a> I've recently scanned. Added my newly acquired DVDs to the <a href="my-dvds.html">list</a>.</td>
+    <td>Added a second <font color="#0000FF"><a href="drawings.html">picture</a></font> page of drawings and a page of <a href="comics.html">comics</a> I've recently scanned. Added my newly acquired DVDs to the <a href="my-dvds.html">list</a>.</td>
   </tr>
 
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 2/6/03 - 12:46 am</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 2/6/03 - 12:46 am</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
-    <td>So many updates. I reworked the <a href="pictures.html">piture page</a>, added some stuff to it. Added information on two other movies I'm &quot;working on&quot; in the <a href="movies.html">movie page</a>, including the current version of &quot;<a href="ninjah-fantasy.html">Nin-Jah Fantasy</a>&quot; the screen play. There's a bunch of other little things that I've fixed that don't necessitate mentioning.</td>
+    <td>So many updates. I reworked the <a href="pictures.html">picture page</a>, added some stuff to it. Added information on two other movies I'm &quot;working on&quot; in the <a href="movies.html">movie page</a>, including the current version of &quot;<a href="ninjah-fantasy.html">Nin-Jah Fantasy</a>&quot; the screen play. There's a bunch of other little things that I've fixed that don't necessitate mentioning.</td>
   </tr>
 
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 9/15/02 - 5:09 pm</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 9/15/02 - 5:09 pm</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
-    <td>My digi-camera sucks. I've determined that so long as I only take small pictures with it, the thing won't reboot my computer. Anyway, I have a piture of my kitties on the bottom of the <a href="pictures.html">piture page</a>. Some random stuff on the <a href="kmart.html">Kmart page</a> has been updated. We're getting new registers and three price check stations are being install in 2-3 weeks. I may have to quit. This just isn't the Kmart I've grown to hate. All four of my main characters for my game are now appearing on the <a href="game.html">Game Progress</a> page.</td>
+    <td>My digi-camera sucks. I've determined that so long as I only take small pictures with it, the thing won't reboot my computer. Anyway, I have a picture of my kitties on the bottom of the <a href="pictures.html">picture page</a>. Some random stuff on the <a href="kmart.html">Kmart page</a> has been updated. We're getting new registers and three price check stations are being install in 2-3 weeks. I may have to quit. This just isn't the Kmart I've grown to hate. All four of my main characters for my game are now appearing on the <a href="game.html">Game Progress</a> page.</td>
   </tr>
 
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 8/19/02 - 1:37 am</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 8/19/02 - 1:37 am</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -172,7 +179,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 7/26/02 - 2:26 am</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 7/26/02 - 2:26 am</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -182,7 +189,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 7/25/02 - 1:25 am</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 7/25/02 - 1:25 am</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -192,7 +199,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 7/24/02 - 12:44 am</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 7/24/02 - 12:44 am</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -202,7 +209,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a2">CrazyBoy</h3></td>
+    <td colspan=2><hr><h3 class="crazyboy">CrazyBoy</h3></td>
   </tr>
   <tr>
     <td><img src="images/cbthumb01.jpg"><p><br></p></td>
@@ -212,7 +219,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 7/13/02 - 3:27 am</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 7/13/02 - 3:27 am</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -222,7 +229,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 7/9/02 - 12:50 am</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 7/9/02 - 12:50 am</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -232,7 +239,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a2">CrazyBoy</h3></td>
+    <td colspan=2><hr><h3 class="crazyboy">CrazyBoy</h3></td>
   </tr>
   <tr>
     <td><img src="images/cbthumb01.jpg"><p><br></p></td>
@@ -242,27 +249,27 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 7/8/02 - 12:23 am</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 7/8/02 - 12:23 am</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
-    <td>More <a href="kmart-pics.html">pictures at Kmart</a>, nothing very special. Just wasting server space. Also took a <a href="pictures.html">piture</a> with the camera out the window while driving down the road at 55mph because I'm dumb.</td>
+    <td>More <a href="kmart-pics.html">pictures at Kmart</a>, nothing very special. Just wasting server space. Also took a <a href="pictures.html">picture</a> with the camera out the window while driving down the road at 55mph because I'm dumb.</td>
   </tr>
 
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 7/6/02 - 11:38 pm</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 7/6/02 - 11:38 pm</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
-    <td>I took more <a href="kmart-pics.html">pictures at Kmart</a> and successfully got them uploaded. CrazyBoy thought the camera was food and accidentally deleted the ones I took yesterday when he was gnawing on the it. He was supposed to post a public apology for destroying the pictures, but that doesn't look much like he is too sorry. I would like to apologize to Nick, whose piture of him with a box on his head was lost in the tragedy.</td>
+    <td>I took more <a href="kmart-pics.html">pictures at Kmart</a> and successfully got them uploaded. CrazyBoy thought the camera was food and accidentally deleted the ones I took yesterday when he was gnawing on the it. He was supposed to post a public apology for destroying the pictures, but that doesn't look much like he is too sorry. I would like to apologize to Nick, whose picture of him with a box on his head was lost in the tragedy.</td>
   </tr>
 
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a2">CrazyBoy - NO MORE PICTURES</h3></td>
+    <td colspan=2><hr><h3 class="crazyboy">CrazyBoy - NO MORE PICTURES</h3></td>
   </tr>
   <tr>
     <td><img src="images/cbthumb01.jpg"><p><br></p></td>
@@ -272,7 +279,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 7/2/02 - 11:36 pm</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 7/2/02 - 11:36 pm</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -282,7 +289,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 7/2/02 - 12:24 am</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 7/2/02 - 12:24 am</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -292,7 +299,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a2">CrazyBoy - 2 + 2 = red - red + red = eleventy-two</h3></td>
+    <td colspan=2><hr><h3 class="crazyboy">CrazyBoy - 2 + 2 = red - red + red = eleventy-two</h3></td>
   </tr>
   <tr>
     <td><img src="images/cbthumb01.jpg"><p><br></p></td>
@@ -302,7 +309,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 6/29/02 - 1:57 am</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 6/29/02 - 1:57 am</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -312,7 +319,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 6/28/02 - 4:59 am</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 6/28/02 - 4:59 am</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -322,7 +329,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 6/26/02 - 4:07 am</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 6/26/02 - 4:07 am</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -332,7 +339,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a2">CrazyBoy - Error - Buzz buzz</h3></td>
+    <td colspan=2><hr><h3 class="crazyboy">CrazyBoy - Error - Buzz buzz</h3></td>
   </tr>
   <tr>
     <td><img src="images/cbthumb01.jpg"><p><br></p></td>
@@ -342,7 +349,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 6/25/02 - 12:34 am</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 6/25/02 - 12:34 am</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -352,7 +359,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 6/23/02 - 3:29 am</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 6/23/02 - 3:29 am</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -362,7 +369,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a2">CrazyBoy - Ah LA LA - COW!</h3></td>
+    <td colspan=2><hr><h3 class="crazyboy">CrazyBoy - Ah LA LA - COW!</h3></td>
   </tr>
   <tr>
     <td><img src="images/cbthumb01.jpg"><p><br></p></td>
@@ -372,7 +379,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 6/23/02 - 1:18 am</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 6/23/02 - 1:18 am</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -382,7 +389,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 6/22/02 - 2:03 am</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 6/22/02 - 2:03 am</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -392,7 +399,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 6/22/02 - 12:22 am</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 6/22/02 - 12:22 am</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
@@ -402,7 +409,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a2">CrazyBoy - what tiime is itt? - is Oprah on?</h3></td>
+    <td colspan=2><hr><h3 class="crazyboy">CrazyBoy - what tiime is itt? - is Oprah on?</h3></td>
   </tr>
   <tr>
     <td><img src="images/cbthumb01.jpg"><p><br></p></td>
@@ -412,7 +419,7 @@
 			
 
   <tr>
-    <td colspan=2><hr><h3 class="a1">Me - 6/22/02 - 12:17 am</h3></td>
+    <td colspan=2><hr><h3 class="label">Me - 6/22/02 - 12:17 am</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
