--- a/brilliant-ideas.html
+++ b/brilliant-ideas.html
@@ -10,64 +10,65 @@
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
 	
 	<div id="body">
-		<div class="article">
-			
-			<h1>Brilliant Ideas</h1>
-			
-			<h3 class="a1">Virus Cure For Cancer</h2>
-			
+		<div class="article">			
+			<h1>Brilliant Ideas</h1>			
+			<h2 class="label">Virus Cure For Cancer</h2>			
 			<p>
 				Maybe it will work, maybe it can't, I don't know, I'm just putting it out there. A virus is specialized at killing cells. The protein coating of a virus tells the virus what kind of cells to go after and infect. If the coating could be changed so that a virus could attack a specific type of cancer cell then a patient could get an injection similar to a flu shot that would destroy only the cancer and leave the healthy cells.
 			</p>
-		
-			<h3 class="a1">S'mores Brownies</h2>
-			
+			<p>
+				2025 Update: there is <a href="https://www.cancerresearch.org/treatment-types/oncolytic-virus-therapy" target="_blank">ongoing work on this</a>.
+			</p>
+			<h2 class="label">S'mores Brownies</h2>			
 			<p>
 				You get some brownie mix, throw in some mini marshmallows and some Golden Grahams cereal, bake and enjoy. I've never actually tried it, so this may not be brilliant in practive, but it seems like a good idea.
 			</p>
-		
-			<h3 class="a1">Car Dealership</h2>
-			
+			<p>
+				2025 Update: this <a href="https://www.duncanhines.com/epic-baking-kits/epic-smores-brownie-kit" target="blank">became a thing</a>.
+			</p>
+			<h2 class="label">Car Dealership</h2>			
 			<p>
 				Okay, so a car dealership in and of itself isn't much of an idea, but one staffed entirely by young, attractive saleswomen in bikinis, although morally wrong, would probly make a ton of money.
 			</p>
-		
-			<h3 class="a1">Exercise Chair 3000</h2>
-		
+			<p>
+				2025 Update: Relieved and kind of surpised this didn't actually become a thing.
+			</p>
+			<h2 class="label">Exercise Chair 3000</h2>		
 			<p>
 				The only exercise chair that lets you sit until you lose weight. Only $800 plus S&amp;H. Order today.
-			</p>
-		
-			<h3 class="a1">Deer Fences Along Highways</h2>
-			
+			</p>		
+			<h2 class="label">Deer Fences Along Highways</h2>			
 			<p>
 				Far from a great idea. Sure they could save lives, but who wants to look at one long fence while they drive? And I certainly don't want to pay for it either. Might as well just go all the way and cage all the deer.
 			</p>
-		
-			<h3 class="a1">Online Grovery Shopping</h2>
-		
 			<p>
-				It would habe to be run locally, and be more like pizza delivery, but the orders would come in over the internet rather than by phone. The site would list the most commonly requested items to allow for easy ordering and the people taking the orders would then go to the store, pick up the items and deliver them for a small fee.
+				2025 Update: this seems to also <a href="https://highways.dot.gov/federal-lands/wildlife-crossings" target="blank">be a thing</a>.
 			</p>
-		
-			<h3 class="a1">Gift-Ideas.com</h2>
-			
+			<h2 class="label">Online Grocery Shopping</h2>		
 			<p>
-				A site where you could go and fill out a profile on the person you're shopping for and then receive a list of ideas of what to but the person. The site could be paid for by the stores that the ideas would come from.
+				It would have to be run locally, and be more like pizza delivery, but the orders would come in over the internet rather than by phone. The site would list the most commonly requested items to allow for easy ordering and the people taking the orders would then go to the store, pick up the items and deliver them for a small fee.
 			</p>
-		
-			<h3 class="a1">The Secret To Life</h2>
-			
+			<p>
+				2025 Update: somehow this also became a thing.
+			</p>
+			<h2 class="label">Gift-Ideas.com</h2>			
+			<p>
+				A site where you could go and fill out a profile on the person you're shopping for and then receive a list of ideas of what to buy the person. The site could be paid for by the stores that the ideas would come from.
+			</p>
+			<p>
+				2025 Update: basically Amazon.com now, I guess.
+			</p>
+			<h2 class="label">The Secret To Life</h2>			
 			<p>
 				As if I would really tell you that here.
-			</p>
-		
-			<h3 class="a1">Fish Shampooer</h2>
-			
+			</p>		
+			<h2 class="label">Fish Shampooer</h2>			
 			<p>
 				Because they can't all be good ideas. Quite possibly the worst idea I've ever come up with. Even if you got a free one in the mail, what would you do with it? I mean really, when's the last time you needed to shampoo a fish? And then where would you find fish shampoo to use in the fish shampooer?
 			</p>
-
+			<p>
+				2025 Update: as far as I can tell, this is still not a thing.
+			</p>
 		</div>
 	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
