--- a/i-show.html
+++ b/i-show.html
@@ -12,44 +12,30 @@
 	<div id="body">
 		<div class="article">
 			<h1>The i-Show Page</h1>
-			
-			<h2><font color="#0000FF">What's an i-Show?</font></h2>
-			
+			<h2 class="label">What's an i-Show?</h2>
 			<p>
 				I had this idea for a show. Something new, different, and exactly what you've seen before. It's supposed to be like a late night talk show without the guests (because who is going to come to Michigan to be on some crappy internet show?) So I do some comedy bits for about twenty minutes a few times a week and see if I can get a cult following... AND THEN I TAKE OVER THE WORLD!!! (Insert evil laugh here.) I'm currently still in the development stages of the show. I'm trying to get enough material for a few weeks worth of shows and I still need a decent video camera. Plus, I'll need better internet hosting.
 			</p>
-		
-			<h2><font color="#008000">Blaise Alicki</font></h2>
-		
-			
+			<h2 class="blaise">Blaise Alicki</h2>
 			<p>
-				The creator, writer, director, and host of the i-Show, <font color="#008000"> Blaise</font> does it all. Why? For you. Because he cares.
-			</p>
-			
-			<h2><font color="#FF00FF">Eddie da Pig</font></h2>
-			
+				The creator, writer, director, and host of the i-Show, <span class="blaise">Blaise</span> does it all. Why? For you. Because he cares.
+			</p>			
+			<h2 class="eddie">Eddie da Pig</h2>			
 			<p>
-				<font color="#FF00FF">Eddie da Pig</font> gives us the word of the day. Unfortunately, Eddie is not a talking pig so the word of the day is &quot;OINK!&quot;<p><img src="images/eddiedapig.gif"></p>
-			</p>
-		
-			<h2><font color="#FF0000">CrazyBoy</font></h2>
-			
+				<span class="eddie">Eddie da Pig</span> gives us the word of the day. Unfortunately, Eddie is not a talking pig so the word of the day is &quot;OINK!&quot;<p><img src="images/eddiedapig.gif"></p>
+			</p>		
+			<h2 class="crazyboy">CrazyBoy</h2>			
 			<p>
 				Wogga Wogga Wogga!!! I haf a pinyins that haf to bee herd!
-			</p>
-		
-			<h2><font color="#808080">Kurt Stevens</font></h2>
-			
+			</p>		
+			<h2 class="kurt">Kurt Stevens</h2>			
 			<p>
 				Delivers the day's headlines like only a true newscaster can.			
-			</p>
-		
-			<h2><font color="#0000FF">Will The i-Show have nudity?</font></h2>
-			
+			</p>		
+			<h2 class="label">Will The i-Show have nudity?</h2>			
 			<p>
-				Only <font color="#FF00FF">da Pig</font> will be appearing naked.
-			</p>
-		
+				Only <span class="eddie">da Pig</span> will be appearing naked.
+			</p>		
 		</div>
 	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
