--- a/kmart-pics.html
+++ b/kmart-pics.html
@@ -11,30 +11,53 @@
 	
 	<div id="body">
 		<div class="article">
-
-			<div>
-				<h1><font color="#FF0000">K</font>mart Pictures</h1>
-				<h2>These are pictures I took at <font color="#FF0000">K</font><font color="#0000FF">mart</font>. More should be coming eventually.</h2>
-				<p><img src="images/kout1.jpg"></p>
-				<p>My store on a sunny Sunday.</p>
-				<p><img src="images/bluelight1.jpg"></p>
-				<p>The majestic <font color="#0000FF">blue light</font> in the distance.</p>
-				<p><img src="images/bluelight2.jpg"></p>
-				<p>Closer to the <font color="#0000FF">blue light</font>.</p>
-				<p><img src="images/chairs1.jpg"></p>
-				<p>I put together these chairs.</p>
-				<p><img src="images/chairs2.jpg" width="553" height="339"></p>
-				<p>Chuck put together the lounge in the foreground, I put together the really uncomfortable padded lounge farther back.</p>
-				<p><img src="images/messy1.jpg"></p>
-				<p>Big mess of empty boxes.</p>
-				<p><img src="images/bts1.jpg" width="477" height="350"><br><img border="0" src="images/bts2.jpg"></p>
-				<p>This is back to school being put out in the first week of July.</p>
-				<p><img src="images/balls1.jpg"></p>
-				<p>Balls. <i>I am so infantile.</i></p>
-				<p><img src="images/lowes1.jpg"></p>
-				<p>Our neighbor, Lowe's.</p>
-			</div>
-
+			<h1 class="label"><span class="k">K</span>mart Pictures</h1>
+			<h2>These are pictures I took at <span class="k">K</span><span class="mart">mart</span>. More should be coming eventually (they didn't).</h2>
+			<p>
+				<img src="images/kout1.jpg">
+				<br>
+				My store on a sunny Sunday.
+			</p>
+			<p>
+				<img src="images/bluelight1.jpg">
+				<br>
+				The majestic <span class="mart">blue light</span> in the distance.
+			</p>
+			<p>
+				<img src="images/bluelight2.jpg">
+				<br>
+				Closer to the <span class="mart">blue light</span>.
+			</p>
+			<p>
+				<img src="images/chairs1.jpg">
+				<br>
+				I put together these chairs.
+			</p>
+			<p>
+				<img src="images/chairs2.jpg" width="553" height="339">
+				<br>
+				Chuck put together the lounge in the foreground, I put together the really uncomfortable padded lounge farther back.
+			</p>
+			<p>
+				<img src="images/messy1.jpg">
+				<br>
+				Big mess of empty boxes.
+			</p>
+			<p>
+				<img src="images/bts1.jpg" width="477" height="350"><br><img border="0" src="images/bts2.jpg">
+				<br>
+				This is back to school being put out in the first week of July.
+			</p>
+			<p>
+				<img src="images/balls1.jpg">
+				<br>
+				Balls. <i>I am so infantile.</i>
+			</p>
+			<p>
+				<img src="images/lowes1.jpg">
+				<br>
+				Our neighbor, Lowe's.
+			</p>
 		</div>
 	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
