--- a/my-dvds.html
+++ b/my-dvds.html
@@ -13,7 +13,7 @@
 		<div class="article">
 
 			<h1>My DVD's</h1>
-			<ul>
+			<ul class="two-columns">
 				<li>28 Days Later</li>
 				<li>Akira</li>
 				<li>Aladdin</li>
@@ -135,8 +135,7 @@
 				<li>Underworld</li>
 				<li>X-Men</li>
 				<li>X-Men 2</li>
-			</ul>			
-
+			</ul>
 		</div>
 	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
